--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -78,6 +78,9 @@ LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LTLIBOBJS = @LTLIBOBJS@
+MAINT = @MAINT@
+MAINTAINER_MODE_FALSE = @MAINTAINER_MODE_FALSE@
+MAINTAINER_MODE_TRUE = @MAINTAINER_MODE_TRUE@
 MAKEINFO = @MAKEINFO@
 MY_SUBDIRS = @MY_SUBDIRS@
 OBJEXT = @OBJEXT@
@@ -167,6 +170,8 @@ AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT
 CLEANFILES = */*.$(SO_EXT) */*.a */*.o */*_moc.cpp */*.d
 
 module_d_files = $(addsuffix .d,$(basename $(module_o_files)))
+
+module_targets = $(addprefix module_,$(shared_modules) $(static_modules))
 subdir = modules
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
@@ -177,10 +182,10 @@ DIST_COMMON = $(srcdir)/Makefile.in Makefile.am
 all: all-am
 
 .SUFFIXES:
-$(srcdir)/Makefile.in:  Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
+$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
 	  $(AUTOMAKE) --gnu  modules/Makefile
-Makefile:  $(srcdir)/Makefile.in  $(top_builddir)/config.status
+Makefile: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)
 uninstall-info-am:
 tags: TAGS
@@ -306,59 +311,6 @@ uninstall-am: uninstall-info-am uninstall-local
 	uninstall-local
 
 
-all:
-	@for dir in $(static_modules) $(shared_modules); do \
-		MODULE_SOURCES= && \
-		MODULE_MOC_HEADERS= && \
-		MODULE_HEADERS= && \
-		MODULE_CXXFLAGS= && \
-		MODULE_LDFLAGS= && \
-		MODULE_3RDPARTY= && \
-		MODULE_MAKE_CMD= && \
-		MODULE_DIR=../modules/$$dir && \
-		. ./$$dir/spec && \
-		MODULE_CXXFLAGS=`cat $$dir/cxxflags` && \
-		MODULE_LDFLAGS=`cat $$dir/ldflags` && \
-		echo && \
-		echo -e "\033[32m>>>\033[0m Compiling $$dir module [LD=$$MODULE_LDFLAGS,CXX=$$MODULE_CXXFLAGS] ..." && \
-		echo && \
-		for mod_3rdparty in $$MODULE_3RDPARTY; do \
-			$(MAKE) -C $$dir/$$mod_3rdparty CC="$(CC)" CXX="$(CXX)"; \
-		done && \
-		moc_cpp_files="" && \
-		o_files="" && \
-		h_files="" && \
-		for src_file in $$MODULE_SOURCES; do \
-			o_file=`expr $$src_file : "\(.*\)\\.c.*"`.o && \
-			o_files="$$o_files $$dir/$$o_file"; \
-		done && \
-		for moc_h_file in $$MODULE_MOC_HEADERS; do \
-			h_files="$$h_files $$dir/$$moc_h_file" && \
-			moc_cpp_file=`expr $$moc_h_file : "\(.*\).h"`_moc.cpp && \
-			moc_cpp_files="$$moc_cpp_files $$dir/$$moc_cpp_file" && \
-			o_file=`expr $$moc_h_file : "\(.*\).h"`_moc.o && \
-			o_files="$$o_files $$dir/$$o_file"; \
-		done && \
-		for h_file in $$MODULE_HEADERS; do \
-			h_files="$$h_files $$dir/$$h_file"; \
-		done && \
-		file_name=$$dir.$(SO_EXT) && \
-		if test -z `expr " $(shared_modules) " : ".* \($$dir\) "`; then \
-			file_name=$$dir.a; \
-		fi && \
-		$(MAKE) "module_o_files=$$o_files" \
-			"module_h_files=$$h_files" \
-			"module_moc_cpp_files=$$moc_cpp_files" \
-			"module_cxxflags=$$MODULE_CXXFLAGS" \
-			"module_ldflags=$$MODULE_LDFLAGS" \
-			$$dir/$$file_name && \
-		cd $$dir && eval "$$MODULE_MAKE_CMD" && cd .. || \
-		exit 1; \
-	done && \
-	echo && \
-	echo -e "\033[32m>>>\033[0m Modules successfully compiled." && \
-	echo
-
 # dirty hack - leading space required because od automake "if" support
 # time to say automake goodbye?
  ifneq (,$(module_d_files))
@@ -393,49 +345,49 @@ $(module_moc_cpp_files):
 	$(QT_MOC_DIR)/moc -o $@ $<
 
 install-data-local: uninstall-local
-	$(mkinstalldirs) "$(DESTDIR)/$(includedir)/kadu/modules/"
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/"
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/translations/"
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/data/"
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/bin/"
+	$(mkinstalldirs) "$(DESTDIR)$(includedir)/kadu/modules/"
+	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/"
+	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/translations/"
+	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/data/"
+	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/bin/"
 	@for dir in $(static_modules) $(shared_modules); do \
 		echo -e "\033[32m>>>\033[0m Installing $$dir module ..."; \
-		$(INSTALL_DATA) $$dir/$$dir.desc "$(DESTDIR)/$(datadir)/kadu/modules"; \
-		$(INSTALL_DATA) $$dir/*.h "$(DESTDIR)/$(includedir)/kadu/modules"; \
+		$(INSTALL_DATA) $$dir/$$dir.desc "$(DESTDIR)$(datadir)/kadu/modules"; \
+		$(INSTALL_DATA) $$dir/*.h "$(DESTDIR)$(includedir)/kadu/modules"; \
 		if test -d $$dir/translations; then \
-			$(INSTALL_DATA) $$dir/translations/*.qm "$(DESTDIR)/$(datadir)/kadu/modules/translations/"; \
+			$(INSTALL_DATA) $$dir/translations/*.qm "$(DESTDIR)$(datadir)/kadu/modules/translations/"; \
 		fi; \
 		if test -d $$dir/data; then \
 			for sub_dir in `find $$dir/data -type d | grep -v /CVS | grep -v /.svn`; do \
 				dst_dir=`echo "$$sub_dir" | sed "s,/data/,/," | sed "s,/data$$,,"`; \
-				$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/data/$$dst_dir"; \
+				$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/data/$$dst_dir"; \
 				for new_file in `find $$sub_dir -type f -maxdepth 1 | sed "s/ /_SPACE_/g"`; do \
 					new_file=`echo "$$new_file" | sed "s/_SPACE_/ /g"`; \
-					$(INSTALL_DATA) "$$new_file" "$(DESTDIR)/$(datadir)/kadu/modules/data/$$dst_dir"; \
+					$(INSTALL_DATA) "$$new_file" "$(DESTDIR)$(datadir)/kadu/modules/data/$$dst_dir"; \
 				done; \
 			done; \
 		fi; \
 		if test -d $$dir/bin; then \
 			for sub_dir in `find $$dir/bin -type d | grep -v /CVS | grep -v /.svn`; do \
 				dst_dir=`echo "$$sub_dir" | sed "s,/bin/,/," | sed "s,/bin$$,,"`; \
-				$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/bin/$$dst_dir"; \
+				$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/bin/$$dst_dir"; \
 				for new_file in `find $$sub_dir -type f -maxdepth 1 | sed "s/ /_SPACE_/g"`; do \
 					new_file=`echo "$$new_file" | sed "s/_SPACE_/ /g"`; \
-					$(INSTALL_PROGRAM) "$$new_file" "$(DESTDIR)/$(datadir)/kadu/modules/bin/$$dst_dir"; \
+					$(INSTALL_PROGRAM) "$$new_file" "$(DESTDIR)$(datadir)/kadu/modules/bin/$$dst_dir"; \
 				done; \
 			done; \
 		fi; \
 		if test -z `expr " $(static_modules) " : ".* \($$dir\) "`; then \
-			$(INSTALL_DATA) $$dir/$$dir.$(SO_EXT) "$(DESTDIR)/$(datadir)/kadu/modules/"; \
+			$(INSTALL_DATA) $$dir/$$dir.$(SO_EXT) "$(DESTDIR)$(datadir)/kadu/modules/"; \
 		fi; \
 	done
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(includedir)/kadu/modules"/*.h
-	rm -f "$(DESTDIR)/$(datadir)/kadu/modules"/*.desc
-	rm -f "$(DESTDIR)/$(datadir)/kadu/modules"/*.$(SO_EXT)
-	rm -f "$(DESTDIR)/$(datadir)/kadu/modules/translations"/*.qm
-	rm -rf "$(DESTDIR)/$(datadir)/kadu/modules/data"/*
+	rm -f "$(DESTDIR)$(includedir)/kadu/modules"/*.h
+	rm -f "$(DESTDIR)$(datadir)/kadu/modules"/*.desc
+	rm -f "$(DESTDIR)$(datadir)/kadu/modules"/*.$(SO_EXT)
+	rm -f "$(DESTDIR)$(datadir)/kadu/modules/translations"/*.qm
+	rm -rf "$(DESTDIR)$(datadir)/kadu/modules/data"/*
 
 clean-local:
 	@for dir in $(static_modules) $(shared_modules); do \
@@ -445,6 +397,57 @@ clean-local:
 			$(MAKE) -C $$dir/$$mod_3rdparty clean; \
 		done; \
 	done
+
+$(module_targets):
+	@dir=`echo $@ | sed s/module_//` && \
+	MODULE_SOURCES= && \
+	MODULE_MOC_HEADERS= && \
+	MODULE_HEADERS= && \
+	MODULE_CXXFLAGS= && \
+	MODULE_LDFLAGS= && \
+	MODULE_3RDPARTY= && \
+	MODULE_MAKE_CMD= && \
+	MODULE_DIR=../modules/$$dir && \
+	. ./$$dir/spec && \
+	MODULE_CXXFLAGS=`cat $$dir/.cxxflags` && \
+	MODULE_LDFLAGS=`cat $$dir/.ldflags` && \
+	echo && \
+	echo -e "\033[32m>>>\033[0m Compiling $$dir module [LD=$$MODULE_LDFLAGS,CXX=$$MODULE_CXXFLAGS] ..." && \
+	echo && \
+	for mod_3rdparty in $$MODULE_3RDPARTY; do \
+		$(MAKE) -C $$dir/$$mod_3rdparty CC="$(CC)" CXX="$(CXX)"; \
+	done && \
+	moc_cpp_files="" && \
+	o_files="" && \
+	h_files="" && \
+	for src_file in $$MODULE_SOURCES; do \
+		o_file=`expr $$src_file : "\(.*\)\\.c.*"`.o && \
+		o_files="$$o_files $$dir/$$o_file"; \
+	done && \
+	for moc_h_file in $$MODULE_MOC_HEADERS; do \
+		h_files="$$h_files $$dir/$$moc_h_file" && \
+		moc_cpp_file=`expr $$moc_h_file : "\(.*\).h"`_moc.cpp && \
+		moc_cpp_files="$$moc_cpp_files $$dir/$$moc_cpp_file" && \
+		o_file=`expr $$moc_h_file : "\(.*\).h"`_moc.o && \
+		o_files="$$o_files $$dir/$$o_file"; \
+	done && \
+	for h_file in $$MODULE_HEADERS; do \
+		h_files="$$h_files $$dir/$$h_file"; \
+	done && \
+	file_name=$$dir.$(SO_EXT) && \
+	if test -z `expr " $(shared_modules) " : ".* \($$dir\) "`; then \
+		file_name=$$dir.a; \
+	fi && \
+	$(MAKE) "module_o_files=$$o_files" \
+		"module_h_files=$$h_files" \
+		"module_moc_cpp_files=$$moc_cpp_files" \
+		"module_cxxflags=$$MODULE_CXXFLAGS" \
+		"module_ldflags=$$MODULE_LDFLAGS" \
+		$$dir/$$file_name && \
+	cd $$dir && eval "$$MODULE_MAKE_CMD" && cd .. || \
+	exit 1
+
+all: $(module_targets)
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
