--- a/translations/Makefile.am
+++ b/translations/Makefile.am
@@ -1,14 +1,14 @@
 
 install-data-local:
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/translations"; \
-	$(INSTALL_DATA) *.qm "$(DESTDIR)/$(datadir)/kadu/translations";
+	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/translations"; \
+	$(INSTALL_DATA) *.qm "$(DESTDIR)$(datadir)/kadu/translations";
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_en.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_pl.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_it.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_de.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_en.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_pl.qm";
-	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_it.qm";
-	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_de.qm";
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/kadu_en.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/kadu_pl.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/kadu_it.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/kadu_de.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_en.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_pl.qm";
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_it.qm";
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_de.qm";
