--- a/Makefile.in
+++ b/Makefile.in
@@ -73,6 +73,9 @@ LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LTLIBOBJS = @LTLIBOBJS@
+MAINT = @MAINT@
+MAINTAINER_MODE_FALSE = @MAINTAINER_MODE_FALSE@
+MAINTAINER_MODE_TRUE = @MAINTAINER_MODE_TRUE@
 MAKEINFO = @MAKEINFO@
 MY_SUBDIRS = @MY_SUBDIRS@
 OBJEXT = @OBJEXT@
@@ -154,7 +157,7 @@ SUBDIRS = @MY_SUBDIRS@
 
 DIST_SUBDIRS = @MY_SUBDIRS@
 
-EXTRA_DIST = admin kadu.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO kadu.lsm kadu.spec 
+EXTRA_DIST = admin AUTHORS COPYING ChangeLog INSTALL README TODO 
 
 AUTOMAKE_OPTIONS = foreign 
 subdir = .
@@ -181,18 +184,18 @@ all: kadu-config.h
 
 am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
  configure.lineno
-$(srcdir)/Makefile.in:  Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
+$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
 	  $(AUTOMAKE) --foreign  Makefile
-Makefile:  $(srcdir)/Makefile.in  $(top_builddir)/config.status
+Makefile: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $@ $(am__depfiles_maybe)
 
 $(top_builddir)/config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
 	$(SHELL) ./config.status --recheck
-$(srcdir)/configure:  $(srcdir)/configure.ac $(ACLOCAL_M4) $(CONFIGURE_DEPENDENCIES)
+$(srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(srcdir)/configure.ac $(ACLOCAL_M4) $(CONFIGURE_DEPENDENCIES)
 	cd $(srcdir) && $(AUTOCONF)
 
-$(ACLOCAL_M4):  configure.ac 
+$(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ configure.ac 
 	cd $(srcdir) && $(ACLOCAL) $(ACLOCAL_AMFLAGS)
 
 kadu-config.h: stamp-h1
@@ -205,7 +208,7 @@ stamp-h1: $(srcdir)/kadu-config.h.in $(top_builddir)/config.status
 	@rm -f stamp-h1
 	cd $(top_builddir) && $(SHELL) ./config.status kadu-config.h
 
-$(srcdir)/kadu-config.h.in:  $(top_srcdir)/configure.ac $(ACLOCAL_M4) 
+$(srcdir)/kadu-config.h.in: @MAINTAINER_MODE_TRUE@ $(top_srcdir)/configure.ac $(ACLOCAL_M4) 
 	cd $(top_srcdir) && $(AUTOHEADER)
 	touch $(srcdir)/kadu-config.h.in
 
@@ -586,15 +589,15 @@ kadu-headers:
 ###########################################################################
 
 install-data-local:
-	$(mkinstalldirs) "$(DESTDIR)/$(includedir)/kadu/"
-	$(INSTALL_DATA) kadu-config.h "$(DESTDIR)/$(includedir)/kadu/"
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/"	
-	$(INSTALL_DATA) AUTHORS "$(DESTDIR)/$(datadir)/kadu/"
-	$(INSTALL_DATA) ChangeLog "$(DESTDIR)/$(datadir)/kadu/"
-	$(INSTALL_DATA) COPYING "$(DESTDIR)/$(datadir)/kadu/"
-	$(INSTALL_DATA) HISTORY "$(DESTDIR)/$(datadir)/kadu/"
-	$(INSTALL_DATA) README "$(DESTDIR)/$(datadir)/kadu/"
-	$(INSTALL_DATA) THANKS "$(DESTDIR)/$(datadir)/kadu/"
+	$(mkinstalldirs) "$(DESTDIR)$(includedir)/kadu/"
+	$(INSTALL_DATA) kadu-config.h "$(DESTDIR)$(includedir)/kadu/"
+	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/"	
+	$(INSTALL_DATA) AUTHORS "$(DESTDIR)$(datadir)/kadu/"
+	$(INSTALL_DATA) ChangeLog "$(DESTDIR)$(datadir)/kadu/"
+	$(INSTALL_DATA) COPYING "$(DESTDIR)$(datadir)/kadu/"
+	$(INSTALL_DATA) HISTORY "$(DESTDIR)$(datadir)/kadu/"
+	$(INSTALL_DATA) README "$(DESTDIR)$(datadir)/kadu/"
+	$(INSTALL_DATA) THANKS "$(DESTDIR)$(datadir)/kadu/"
 	@echo
 	@echo " **************************************"
 	@echo " * Kadu is now successfully installed *"
@@ -606,13 +609,13 @@ install-data-local:
 	@echo
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(includedir)/kadu/kadu-config.h"
-	rm -f "$(DESTDIR)/$(datadir)/kadu/AUTHORS"
-	rm -f "$(DESTDIR)/$(datadir)/kadu/ChangeLog"
-	rm -f "$(DESTDIR)/$(datadir)/kadu/COPYING"
-	rm -f "$(DESTDIR)/$(datadir)/kadu/HISTORY"
-	rm -f "$(DESTDIR)/$(datadir)/kadu/README"
-	rm -f "$(DESTDIR)/$(datadir)/kadu/THANKS"
+	rm -f "$(DESTDIR)$(includedir)/kadu/kadu-config.h"
+	rm -f "$(DESTDIR)$(datadir)/kadu/AUTHORS"
+	rm -f "$(DESTDIR)$(datadir)/kadu/ChangeLog"
+	rm -f "$(DESTDIR)$(datadir)/kadu/COPYING"
+	rm -f "$(DESTDIR)$(datadir)/kadu/HISTORY"
+	rm -f "$(DESTDIR)$(datadir)/kadu/README"
+	rm -f "$(DESTDIR)$(datadir)/kadu/THANKS"
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
