--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -73,6 +73,9 @@ LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LTLIBOBJS = @LTLIBOBJS@
+MAINT = @MAINT@
+MAINTAINER_MODE_FALSE = @MAINTAINER_MODE_FALSE@
+MAINTAINER_MODE_TRUE = @MAINTAINER_MODE_TRUE@
 MAKEINFO = @MAKEINFO@
 MY_SUBDIRS = @MY_SUBDIRS@
 OBJEXT = @OBJEXT@
@@ -153,36 +156,46 @@ target_vendor = @target_vendor@
 bin_PROGRAMS = kadu
 
 kadu_SOURCES = \
-about.cpp about.h \
-chat.cpp chat.h \
-config_dialog.cpp config_dialog.h \
-config_file.cpp config_file.h \
-debug.cpp debug.h \
-emoticons.cpp emoticons.h \
-expimp.cpp expimp.h \
-gadu.cpp gadu.h \
-history.cpp history.h \
-ignore.cpp ignore.h \
-kadu.cpp kadu.h \
-main.cpp \
-message_box.cpp message_box.h \
-misc.cpp misc.h \
-modules.cpp modules.h \
-pending_msgs.cpp pending_msgs.h \
-personal_info.cpp personal_info.h \
-search.cpp search.h \
-status.cpp status.h \
-tabbar.cpp tabbar.h \
-userbox.cpp userbox.h \
-userinfo.cpp userinfo.h \
-userlist.cpp userlist.h \
-updates.cpp updates.h \
-about_moc.cpp chat_moc.cpp config_dialog_moc.cpp emoticons_moc.cpp \
-expimp_moc.cpp gadu_moc.cpp history_moc.cpp ignore_moc.cpp \
-kadu_moc.cpp message_box_moc.cpp misc_moc.cpp modules_moc.cpp \
-pending_msgs_moc.cpp personal_info_moc.cpp search_moc.cpp status_moc.cpp \
-tabbar_moc.cpp userbox_moc.cpp userinfo_moc.cpp userlist_moc.cpp \
-updates_moc.cpp
+about.cpp chat.cpp config_dialog.cpp config_file.cpp debug.cpp emoticons.cpp \
+expimp.cpp gadu.cpp history.cpp ignore.cpp kadu.cpp main.cpp message_box.cpp \
+misc.cpp modules.cpp pending_msgs.cpp personal_info.cpp search.cpp status.cpp \
+tabbar.cpp userbox.cpp userinfo.cpp userlist.cpp updates.cpp
+
+
+kadudir = $(DESTDIR)$(includedir)/kadu
+
+kadu_HEADERS = \
+about.h chat.h config_dialog.h config_file.h debug.h emoticons.h \
+expimp.h gadu.h history.h ignore.h kadu.h message_box.h \
+misc.h modules.h pending_msgs.h personal_info.h search.h status.h \
+tabbar.h userbox.h userinfo.h userlist.h updates.h
+
+
+BUILT_SOURCES = moc/about_moc.cpp moc/chat_moc.cpp moc/config_dialog_moc.cpp moc/emoticons_moc.cpp \
+moc/expimp_moc.cpp moc/gadu_moc.cpp moc/history_moc.cpp moc/ignore_moc.cpp \
+moc/kadu_moc.cpp moc/message_box_moc.cpp moc/misc_moc.cpp moc/modules_moc.cpp \
+moc/pending_msgs_moc.cpp moc/personal_info_moc.cpp moc/search_moc.cpp moc/status_moc.cpp \
+moc/tabbar_moc.cpp moc/userbox_moc.cpp moc/userinfo_moc.cpp moc/userlist_moc.cpp \
+moc/updates_moc.cpp
+
+
+am_kadu_OBJECTS = \
+obj/about.$(OBJEXT) obj/chat.$(OBJEXT) obj/config_dialog.$(OBJEXT) \
+obj/config_file.$(OBJEXT) obj/debug.$(OBJEXT) obj/emoticons.$(OBJEXT) \
+obj/expimp.$(OBJEXT) obj/gadu.$(OBJEXT) obj/history.$(OBJEXT) \
+obj/ignore.$(OBJEXT) obj/kadu.$(OBJEXT) obj/main.$(OBJEXT) \
+obj/message_box.$(OBJEXT) obj/misc.$(OBJEXT) obj/modules.$(OBJEXT) \
+obj/pending_msgs.$(OBJEXT) obj/personal_info.$(OBJEXT) obj/search.$(OBJEXT) \
+obj/status.$(OBJEXT) obj/tabbar.$(OBJEXT) obj/userbox.$(OBJEXT) \
+obj/userinfo.$(OBJEXT) obj/userlist.$(OBJEXT) obj/updates.$(OBJEXT) \
+obj/about_moc.$(OBJEXT) obj/chat_moc.$(OBJEXT) obj/config_dialog_moc.$(OBJEXT) \
+obj/emoticons_moc.$(OBJEXT) obj/expimp_moc.$(OBJEXT) obj/gadu_moc.$(OBJEXT) \
+obj/history_moc.$(OBJEXT) obj/ignore_moc.$(OBJEXT) obj/kadu_moc.$(OBJEXT) \
+obj/message_box_moc.$(OBJEXT) obj/misc_moc.$(OBJEXT) obj/modules_moc.$(OBJEXT) \
+obj/pending_msgs_moc.$(OBJEXT) obj/personal_info_moc.$(OBJEXT) \
+obj/search_moc.$(OBJEXT) obj/status_moc.$(OBJEXT) obj/tabbar_moc.$(OBJEXT) \
+obj/userbox_moc.$(OBJEXT) obj/userinfo_moc.$(OBJEXT) obj/userlist_moc.$(OBJEXT) \
+obj/updates_moc.$(OBJEXT)
 
 
 
@@ -210,7 +223,7 @@ $(PTHREAD_LDFLAGS) $(DYNAMIC_OPT) $(OPENSSL_LIBS)
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT
 
 EXTRA_DIST = hi16-app-kadu.png hi22-app-kadu.png hi24-app-kadu.png hi32-app-kadu.png hi48-app-kadu.png kadu.desktop
-CLEANFILES = *_moc.cpp $(PHEADERS_CLEANFILES)
+CLEANFILES = obj/*.o moc/*_moc.cpp $(PHEADERS_CLEANFILES)
 subdir = kadu
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
@@ -219,24 +232,6 @@ CONFIG_CLEAN_FILES = modules_static.cpp
 bin_PROGRAMS = kadu$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 
-am_kadu_OBJECTS = about.$(OBJEXT) chat.$(OBJEXT) config_dialog.$(OBJEXT) \
-	config_file.$(OBJEXT) debug.$(OBJEXT) emoticons.$(OBJEXT) \
-	expimp.$(OBJEXT) gadu.$(OBJEXT) history.$(OBJEXT) \
-	ignore.$(OBJEXT) kadu.$(OBJEXT) main.$(OBJEXT) \
-	message_box.$(OBJEXT) misc.$(OBJEXT) modules.$(OBJEXT) \
-	pending_msgs.$(OBJEXT) personal_info.$(OBJEXT) search.$(OBJEXT) \
-	status.$(OBJEXT) tabbar.$(OBJEXT) userbox.$(OBJEXT) \
-	userinfo.$(OBJEXT) userlist.$(OBJEXT) updates.$(OBJEXT) \
-	about_moc.$(OBJEXT) chat_moc.$(OBJEXT) \
-	config_dialog_moc.$(OBJEXT) emoticons_moc.$(OBJEXT) \
-	expimp_moc.$(OBJEXT) gadu_moc.$(OBJEXT) history_moc.$(OBJEXT) \
-	ignore_moc.$(OBJEXT) kadu_moc.$(OBJEXT) \
-	message_box_moc.$(OBJEXT) misc_moc.$(OBJEXT) \
-	modules_moc.$(OBJEXT) pending_msgs_moc.$(OBJEXT) \
-	personal_info_moc.$(OBJEXT) search_moc.$(OBJEXT) \
-	status_moc.$(OBJEXT) tabbar_moc.$(OBJEXT) userbox_moc.$(OBJEXT) \
-	userinfo_moc.$(OBJEXT) userlist_moc.$(OBJEXT) \
-	updates_moc.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 kadu_DEPENDENCIES = $(foreach mod,$(basename \
 	$(static_modules)),../modules/$(mod)/$(mod).a)
@@ -244,54 +239,40 @@ kadu_DEPENDENCIES = $(foreach mod,$(basename \
 DEFAULT_INCLUDES =  -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/admin/depcomp
 am__depfiles_maybe = depfiles
-@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/about.Po ./$(DEPDIR)/about_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/chat.Po ./$(DEPDIR)/chat_moc.Po \
+@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/about.Po ./$(DEPDIR)/chat.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config_dialog.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/config_dialog_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config_file.Po ./$(DEPDIR)/debug.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/emoticons.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/emoticons_moc.Po ./$(DEPDIR)/expimp.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/expimp_moc.Po ./$(DEPDIR)/gadu.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/gadu_moc.Po ./$(DEPDIR)/history.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/history_moc.Po ./$(DEPDIR)/ignore.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/ignore_moc.Po ./$(DEPDIR)/kadu.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/kadu_moc.Po ./$(DEPDIR)/main.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/message_box.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/message_box_moc.Po ./$(DEPDIR)/misc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/misc_moc.Po ./$(DEPDIR)/modules.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/modules_moc.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/emoticons.Po ./$(DEPDIR)/expimp.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/gadu.Po ./$(DEPDIR)/history.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/ignore.Po ./$(DEPDIR)/kadu.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/main.Po ./$(DEPDIR)/message_box.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/misc.Po ./$(DEPDIR)/modules.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/pending_msgs.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/pending_msgs_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/personal_info.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/personal_info_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/search.Po ./$(DEPDIR)/search_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/status.Po ./$(DEPDIR)/status_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/tabbar.Po ./$(DEPDIR)/tabbar_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/updates.Po ./$(DEPDIR)/updates_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/userbox.Po ./$(DEPDIR)/userbox_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/userinfo.Po ./$(DEPDIR)/userinfo_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/userlist.Po ./$(DEPDIR)/userlist_moc.Po
+@AMDEP_TRUE@	./$(DEPDIR)/personal_info.Po ./$(DEPDIR)/search.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/status.Po ./$(DEPDIR)/tabbar.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/updates.Po ./$(DEPDIR)/userbox.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/userinfo.Po ./$(DEPDIR)/userlist.Po
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
 	-o $@
-COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
-	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
-CCLD = $(CC)
-LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 DIST_SOURCES = $(kadu_SOURCES)
-DIST_COMMON = $(srcdir)/Makefile.in Makefile.am modules_static.cpp.in
+HEADERS = $(kadu_HEADERS)
+
+DIST_COMMON = $(kadu_HEADERS) $(srcdir)/Makefile.in Makefile.am \
+	modules_static.cpp.in
 SOURCES = $(kadu_SOURCES)
 
-all: all-am
+all: $(BUILT_SOURCES)
+	$(MAKE) $(AM_MAKEFLAGS) all-am
 
 .SUFFIXES:
 .SUFFIXES: .cpp .o .obj
-$(srcdir)/Makefile.in:  Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
+$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
 	  $(AUTOMAKE) --gnu  kadu/Makefile
-Makefile:  $(srcdir)/Makefile.in  $(top_builddir)/config.status
+Makefile: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)
 modules_static.cpp: $(top_builddir)/config.status modules_static.cpp.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
@@ -330,73 +311,48 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/about.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/about_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_dialog.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_dialog_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_file.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/emoticons.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/emoticons_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/expimp.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/expimp_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gadu.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gadu_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/history.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/history_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ignore.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ignore_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kadu.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kadu_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/message_box.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/message_box_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/misc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/misc_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/modules.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/modules_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pending_msgs.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pending_msgs_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/personal_info.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/personal_info_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/search.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/search_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/status.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/status_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tabbar.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tabbar_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/updates.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/updates_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userbox.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userbox_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userinfo.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userinfo_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userlist.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userlist_moc.Po@am__quote@
-
-.cpp.o:
-@am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" \
-@am__fastdepCXX_TRUE@	  -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<; \
-@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; \
-@am__fastdepCXX_TRUE@	else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; \
-@am__fastdepCXX_TRUE@	fi
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
-
-.cpp.obj:
-@am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" \
-@am__fastdepCXX_TRUE@	  -c -o $@ `if test -f '$<'; then $(CYGPATH_W) '$<'; else $(CYGPATH_W) '$(srcdir)/$<'; fi`; \
-@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; \
-@am__fastdepCXX_TRUE@	else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; \
-@am__fastdepCXX_TRUE@	fi
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ `if test -f '$<'; then $(CYGPATH_W) '$<'; else $(CYGPATH_W) '$(srcdir)/$<'; fi`
 uninstall-info-am:
+kaduHEADERS_INSTALL = $(INSTALL_HEADER)
+install-kaduHEADERS: $(kadu_HEADERS)
+	@$(NORMAL_INSTALL)
+	$(mkinstalldirs) $(DESTDIR)$(kadudir)
+	@list='$(kadu_HEADERS)'; for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  f="`echo $$p | sed -e 's|^.*/||'`"; \
+	  echo " $(kaduHEADERS_INSTALL) $$d$$p $(DESTDIR)$(kadudir)/$$f"; \
+	  $(kaduHEADERS_INSTALL) $$d$$p $(DESTDIR)$(kadudir)/$$f; \
+	done
+
+uninstall-kaduHEADERS:
+	@$(NORMAL_UNINSTALL)
+	@list='$(kadu_HEADERS)'; for p in $$list; do \
+	  f="`echo $$p | sed -e 's|^.*/||'`"; \
+	  echo " rm -f $(DESTDIR)$(kadudir)/$$f"; \
+	  rm -f $(DESTDIR)$(kadudir)/$$f; \
+	done
 
 ETAGS = etags
 ETAGSFLAGS =
@@ -484,12 +440,14 @@ distdir: $(DISTFILES)
 	  fi; \
 	done
 check-am: all-am
-check: check-am
-all-am: Makefile $(PROGRAMS)
+check: $(BUILT_SOURCES)
+	$(MAKE) $(AM_MAKEFLAGS) check-am
+all-am: Makefile $(PROGRAMS) $(HEADERS)
 
 installdirs:
-	$(mkinstalldirs) $(DESTDIR)$(bindir)
-install: install-am
+	$(mkinstalldirs) $(DESTDIR)$(bindir) $(DESTDIR)$(kadudir)
+install: $(BUILT_SOURCES)
+	$(MAKE) $(AM_MAKEFLAGS) install-am
 install-exec: install-exec-am
 install-data: install-data-am
 uninstall: uninstall-am
@@ -514,6 +472,7 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
+	-test -z "$(BUILT_SOURCES)" || rm -f $(BUILT_SOURCES)
 clean: clean-am
 
 clean-am: clean-binPROGRAMS clean-generic mostlyclean-am
@@ -532,7 +491,7 @@ info: info-am
 
 info-am:
 
-install-data-am: install-data-local
+install-data-am: install-data-local install-kaduHEADERS
 
 install-exec-am: install-binPROGRAMS
 
@@ -559,20 +518,42 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-binPROGRAMS uninstall-info-am uninstall-local
+uninstall-am: uninstall-binPROGRAMS uninstall-info-am \
+	uninstall-kaduHEADERS uninstall-local
 
 .PHONY: CTAGS GTAGS all all-am check check-am clean clean-binPROGRAMS \
 	clean-generic ctags distclean distclean-compile \
 	distclean-generic distclean-tags distdir dvi dvi-am info \
 	info-am install install-am install-binPROGRAMS install-data \
 	install-data-am install-data-local install-exec install-exec-am \
-	install-info install-info-am install-man install-strip \
-	installcheck installcheck-am installdirs maintainer-clean \
-	maintainer-clean-generic mostlyclean mostlyclean-compile \
-	mostlyclean-generic pdf pdf-am ps ps-am tags uninstall \
-	uninstall-am uninstall-binPROGRAMS uninstall-info-am \
-	uninstall-local
+	install-info install-info-am install-kaduHEADERS install-man \
+	install-strip installcheck installcheck-am installdirs \
+	maintainer-clean maintainer-clean-generic mostlyclean \
+	mostlyclean-compile mostlyclean-generic pdf pdf-am ps ps-am \
+	tags uninstall uninstall-am uninstall-binPROGRAMS \
+	uninstall-info-am uninstall-kaduHEADERS uninstall-local
 
+
+.cpp.o:
+	@echo -e "\033[32m >>> make obj/"$@" <<< \033[0m"
+	make obj/$@
+
+.cpp.obj:
+	@echo "go away ;)"
+
+obj/%.o: %.cpp
+@am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<; then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
+
+obj/%_moc.o: moc/%_moc.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<; then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
 
 # dirty hack - leading space required because od automake "if" support
 # time to say automake goodbye?
@@ -590,12 +571,12 @@ kadu-headers.d: kadu-headers.h
 
  endif
 
-%_moc.cpp: %.h
+moc/%_moc.cpp: %.h
 	$(QT_MOC_DIR)/moc -o $@ $<
 
 install-data-local:
-	$(mkinstalldirs) "$(DESTDIR)/$(includedir)/kadu/"
-	$(INSTALL_DATA) *.h "$(DESTDIR)/$(includedir)/kadu/"
+#	$(mkinstalldirs) "$(DESTDIR)/$(includedir)/kadu/"
+#	$(INSTALL_DATA) *.h "$(DESTDIR)/$(includedir)/kadu/"
 	@if test -w "$(DESTDIR)$(datadir)"; then \
 		$(mkinstalldirs) "$(DESTDIR)$(datadir)/applnk/Internet/"; \
 		echo "[Desktop Entry]" > "$(DESTDIR)$(datadir)/applnk/Internet/kadu.desktop"; \
@@ -627,7 +608,7 @@ install-data-local:
 	fi;
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(includedir)/kadu"/*.h
+	rm -f "$(DESTDIR)$(includedir)/kadu"/*.h
 	rm -f "$(DESTDIR)$(datadir)/applnk/Internet/kadu.desktop"
 	rm -f "$(DESTDIR)$(datadir)/pixmaps/kadu-48.png"
 	rm -f "$(DESTDIR)$(datadir)/pixmaps/kadu.png"
